Implement `RawlsJsonQuartzJob`